Bug 72548 - ODF: invalid attribute value written, 'sorted-ascending' for table:display-list attribute in <table:content-validation> element
Summary: ODF: invalid attribute value written, 'sorted-ascending' for table:display-li...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: odf_validation target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 22:22 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2013-12-10 12:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2013-12-09 22:22:02 UTC
Inherited from OOo
<table:content-validation table:display-list='sorted-ascending' ...>
is written, correct would be 'sort-ascending', see http://docs.oasis-open.org/office/v1.2/cs01/OpenDocument-v1.2-cs01-part1.html#__RefHeading__1418374_253892949
Comment 1 Eike Rathke (retired, only occasionally showing up) 2013-12-09 22:34:36 UTC
This will be a two-step fix:
1. enable current and previous release (4.2 and 4.1.x) to read the correct
   value, but do not write it yet
2. in next release (4.3) write the correct value
Comment 2 Commit Notification 2013-12-09 22:59:04 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8047ae4a8244199717698f2e2f5281551e97912c

be able to read the correct 'sort-ascending' value, fdo#72548



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-12-09 23:10:51 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e485eede25b01482c7bb3c7808e9feb8f9c9d518&h=libreoffice-4-2

be able to read the correct 'sort-ascending' value, fdo#72548


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2013-12-10 10:34:40 UTC
Pending review
for 4-1 at https://gerrit.libreoffice.org/7016
for 4-1-4 at https://gerrit.libreoffice.org/7017
Comment 5 Commit Notification 2013-12-10 10:57:10 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e89666b4e23189dcaa8fdb308e1b48015d6875b

write the correct 'sort-ascending' value, fdo#72548



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2013-12-10 11:01:11 UTC
Test case document where this occurs is attachment 45482 [details] of bug 35943
Comment 7 Commit Notification 2013-12-10 11:32:27 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1bb23e95e3c4ffd325d739b52bfe2910368a03d&h=libreoffice-4-1

be able to read the correct 'sort-ascending' value, fdo#72548


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-12-10 12:06:49 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a231567481525384cbce9d49c2e3e425ecdd40ce&h=libreoffice-4-1-4

be able to read the correct 'sort-ascending' value, fdo#72548


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.