be able to read the correct 'sort-ascending' value, fdo#72548

... for <table:content-validation table:display-list='sort-ascending' ...>
but do not write it yet.

Change-Id: I05bdf27cee27f7456b660267b95126420474eb99
(cherry picked from commit 8047ae4a8244199717698f2e2f5281551e97912c)
Reviewed-on: https://gerrit.libreoffice.org/7016
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>